corrected bar align problem

--- a/style/style.css
+++ b/style/style.css
@@ -552,7 +552,7 @@ top: 62px;
   .bar-font{
     display: block;
     position: absolute;
-    right: 145px;
+    right: 140px;
 top: 6px;
   }
   
